# dimagx

./: .gitignore  CHANGELOG.md  INSTALL.md  MANIFEST.in  README.md  pyproject.toml  requirements.txt
.github/workflows/: publish_pypi.yml
dimagx/: __init__.py  cli.py  commit_log.py  config.py  db.py  embeddings.py  githook.py  graph.py  mcp_server.py  prd.py  scanner.py  splash.py  symbols.py  ui.py  watcher.py  watcher_daemon.py
dimagx.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
dimagx/static/: app.js  index.html  style.css
docs/: architecture.md  mcp.md
scripts/: debug_ast.py
tests/: test_symbols.py
website/: index.html  style.css
