[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dimagx"
version = "0.1.0"
description = "Project brain for coding agents — memory graph for code, prompts, features and PRDs"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12.0",
    "rich>=13.0.0",
    "kuzu>=0.7.0",
    "gitpython>=3.1.0",
    "mcp>=1.0.0",
    "pyyaml>=6.0",
    "anthropic>=0.25.0",
    "pypdf2>=3.0.0",
    "python-docx>=1.0.0",
    "watchdog>=4.0.0",
]

[project.scripts]
dimagx            = "dimagx.cli:app"
dimagx-mcp        = "dimagx.mcp_server:main"
dimagx-commit-log = "dimagx.commit_log:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["dimagx*"]
